# followthemoney

./: .bumpversion.cfg  .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  Dockerfile  GRAPH.md  LICENSE  MANIFEST.in  Makefile  README.md  babel.cfg  experiment.py  links.yaml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini  transifex.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  discourse.yml  docker.yml  docs.yml  main.yml
.tx/: config
contrib/: PERF.md  check_model.py  collisions.py  itemlist.py  memtest.py  perf.py  perf_compare.py  wikidata.py
contrib/benchmarks/: bm_create_proxy_cleaned.py  run.sh
docs/: .gitignore  Makefile  api.rst  cli.rst  conf.py  credits.rst  custom.rst  entity.rst  faq.rst  fragments.rst  ftm.ttl  graph.rst  index.md  index.rst  mapping.rst  namespace.rst  package-lock.json  package.json  requirements.txt  schema.md
docs.astro/: astro.config.mjs  index.rst  package-lock.json  package.json  tsconfig.json
docs.astro/src/: options.json
docs/_templates/: model.jinja2  schema.jinja2  types.jinja2
docs/ns/: ftm.jsonld  ftm.ttl  ftm.xml  index.md
docs/src/: options.json
enrich/: MANIFEST.in  Makefile  README.md  setup.py
enrich/followthemoney_enrich/: __init__.py  aleph.py  cache.py  cli.py  common.py  enricher.py  opencorporates.py  orbis.py  result.py  util.py
enrich/old/: API_FTM_mapping.xlsx  bvdorbis.py  opencorporates.py  wikidata.py  wikipedia.py
examples/: example_mapping.yml
followthemoney/: __init__.py  compare.py  compare2.py  exc.py  experiment.py  graph.py  helpers.py  judgement.py  link.py  mapping.py  messages.py  model.py  multi_part_proxy.py  namespace.py  offshore.py  ontology.py  pragma.py  property.py  proxy.py  rdf.py  schema.py  selectors.py  types.py  types_.py  util.py  value.py
followthemoney/cli/: __init__.py  aggregate.py  cli.py  csv.py  dedupe.py  excel.py  exports.py  filter_recent.py  graph.py  mapping.py  ocds.py  rdf.py  sieve.py  statement.py  util.py
followthemoney/dataset/: __init__.py  catalog.py  coverage.py  dataset.py  publisher.py  resource.py  util.py
followthemoney/dedupe/: __init__.py  judgement.py  linker.py  match.py  recon.py
followthemoney/export/: csv.py  (+6 more)
integrate/: Dockerfile  Makefile  README.md  setup.py
java/: README.md  pom.xml
js/: .eslintignore  .eslintrc.js  .gitignore  LICENSE  README.md  eslint.config.mjs  old.travis.yml  package-lock.json  package.json  rollup.config.mjs  rollup.config.ts  tsconfig.json
linker/: Dockerfile  Pipfile  README.md  app.py  setup.py
ns/: ontology.py
site/: .prettierignore  astro.config.mjs  next.config.js  next.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
tests/: conftest.py  test_compare.py  test_graph.py  test_helpers.py  test_keys.py  test_link.py  test_mapping.py  test_model.py  test_multi_part_proxy.py  test_namespace.py  test_pragma.py  test_proxy.py  test_util.py
util/: LICENSE  README.md  setup.py
(+442 files in other folders)
